Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51118

ComboBox doesn't show/select currentIndex

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.1, 5.7.0 Beta
    • 5.6.0 RC
    • Quick: Controls 2
    • None
    • c59c43bbc44026a508746b1de2505f6185bd0310

      In Material style's dark theme, the highlight of the current item is not visible in the popup

      ComboBox {
          id: ayStereoSeparation
          model: ["None", "ACB", "ABC"]
          currentIndex: 1
          onCurrentTextChanged: console.log(currentText)
      }
      

      :/qtlabscontrols.conf
      [Controls]
      Style=Material

      [Material]
      Theme=Dark
      Accent=Teal
      Primary=BlueGrey

        1. device-2016-02-19-124427.png
          28 kB
          BogDan Vatra
        2. material-design-buttons-dropdown.png
          30 kB
          J-P Nurmi
        3. material-design-buttons-dropdown2.png
          50 kB
          J-P Nurmi
        4. screenshot-1.png
          4 kB
          BogDan Vatra
        5. screenshot-2.png
          0.6 kB
          BogDan Vatra
        6. bug51118.tar.gz
          1 kB
          BogDan Vatra
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes