ItemDelegate: make the highlight visible against any background

Use a translucent color for the highlight, so that the exact background
color doesn't matter.

Change-Id: I63348137dedd04aca8110b8f7610506ca003ec87
Task-number: QTBUG-51118
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>