src/imports/controls/material/ItemDelegate.qml
@@ -148,7 +148,7 @@ T.ItemDelegate {
     //! [background]
     background: Rectangle {
         visible: control.pressed || control.highlighted
-        color: control.pressed ? control.Material.flatButtonPressColor : control.Material.backgroundColor
+        color: control.pressed ? control.Material.flatButtonPressColor : control.Material.listHighlightColor
     }
     //! [background]
 }
